used the same meny bar

--- a/css/Register.css
+++ b/css/Register.css
@@ -1,9 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Neuton:ital@1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=NTR&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
 body {
     background: url('./Images/ug.png');
 }
 
-header {
+
+/* header {
     background-color: white;
     color: white;
     height: 60px;
@@ -51,6 +58,82 @@ li {
 header ul li a:hover {
     background-color: rgba(220, 20, 60);
     color: white;
+} */
+
+header {
+    overflow: hidden;
+    height: 100vh;
+    width: 100%;
+    background-size: cover;
+    position: relative;
+    background-attachment: fixed;
+}
+
+#logo {
+    position: absolute;
+    top: 9%;
+    left: 5%;
+    transform: translate(-40%, -30%);
+    text-align: center;
+    font-family: "Neuton", serif;
+    line-height: 30px;
+    margin-bottom: 10px;
+}
+
+#logo>a>img {
+    width: 70%;
+}
+
+#nav {
+    width: 90%;
+    color: black;
+    position: absolute;
+    top: 7%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-family: "Neuton", serif;
+    line-height: 50px;
+}
+
+#nav img {
+    width: 150px;
+    padding-left: 20px;
+    padding-top: 10px;
+    top: 0%;
+}
+
+#nav .header-list {
+    flex: 1;
+    text-align: right;
+}
+
+.header-list ul li {
+    list-style: none;
+    display: inline-block;
+    padding: 8px 15px;
+    position: relative;
+}
+
+.header-list ul li a {
+    color: black;
+    font-size: 24px;
+    text-decoration: none;
+    font-family: "Fredoka One", cursive;
+}
+
+.header-list ul li::after {
+    content: "";
+    height: 2px;
+    background: #cd5c5c;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+    width: 0%;
+}
+
+.header-list ul li:hover::after {
+    width: 100%;
 }
 
 * {
